# ocr-dataset-generator

./: .gitignore  README.md  degrade_images_cli.py  generate_text_images_cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: example.ipynb  pipeline_demo.ipynb
src/: __init__.py  blur_images.py  degrade_dataset.py  downscaled_image_generator.py  generate_clear_text_images.py  metrics.py  noise.py  perspective_image_transformation.py  transformations.py  utils.py
src/image_ops/: __init__.py  affine_transform.py  base.py  box_blur.py  gauss.py  gaussian_blur.py  max_filter.py  median_filter.py  min_filter.py  poisson.py  resize.py  rotate.py  salt_pepper.py  scale.py  speckle.py  translate.py
tests/: test_smoke.py
